--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -4,30 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <ImageButton
-        android:id="@+id/Image_Select"
-        android:layout_width="393dp"
-        android:layout_height="342dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="94dp"
-        android:layout_marginEnd="11dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+    tools:context=".Post">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/title"
         android:layout_width="383dp"
         android:layout_height="61dp"
         android:layout_marginStart="19dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="9dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="What's New?"
+        android:inputType="textPersonName"
         android:textAlignment="center"
         android:textSize="20dp"
         android:textStyle="bold|italic"
@@ -36,18 +24,40 @@
         app:layout_constraintTop_toBottomOf="@+id/Image_Select" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/story"
         android:layout_width="368dp"
         android:layout_height="62dp"
         android:layout_marginStart="29dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="21dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Name"
+        android:inputType="textPersonName"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/title" />
+
+    <ImageButton
+        android:id="@+id/Image_Select"
+        android:layout_width="380dp"
+        android:layout_height="276dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="9dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <Button
+        android:id="@+id/Submit_button"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="18dp"
+        android:text="Go ON!!"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="1dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
