--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -15,8 +15,9 @@
         android:layout_marginEnd="9dp"
         android:ems="10"
         android:hint="What's New?"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:textAlignment="center"
+        android:textAllCaps="true"
         android:textSize="20dp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +33,7 @@
         android:layout_marginEnd="21dp"
         android:ems="10"
         android:hint="Name"
-        android:inputType="textPersonName"
+        android:inputType="textMultiLine"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,10 +55,11 @@
         android:id="@+id/Submit_button"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="40dp"
         android:text="Go ON!!"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="1dp" />
+        app:layout_constraintTop_toBottomOf="@+id/story"
+        tools:layout_editor_absoluteX="-7dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
